fix overflow and font issues

--- a/src/scss/components/tabs/tab.module.scss
+++ b/src/scss/components/tabs/tab.module.scss
@@ -10,7 +10,7 @@
   transition: all 0.3s ease-out;
 
   @include mixins.respond(phone-md) {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
 
   &:hover,
