--- a/src/scss/pages/work/work.module.scss
+++ b/src/scss/pages/work/work.module.scss
@@ -36,6 +36,10 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
   grid-gap: 3rem;
+
+  @include mixins.respond(phone-md) {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  }
 }
 
 .tabs {
